--- a/JAVASCRIPT/Calculator/index.css
+++ b/JAVASCRIPT/Calculator/index.css
@@ -29,5 +29,122 @@ body{
 .output{
     border:solid 2px var(--main-color);
     height: 60px;
-    border-radius: 20px
+    border-radius: 20px;
+    overflow:hidden;
+    margin-bottom: 20px ;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.output input{
+    height:100%;
+    width:100%;
+    border:none;
+    outline: none;
+    font-size: 50px;
+    text-align: end;
+    padding-right: 20px;
+    color: var(--main-color);
+}
+
+.output input ::placeholder{
+    color: var(--main-color);
+
+
+}
+
+.btns button{
+    
+    border: none;
+    outline: none;
+    height:60px;
+    border-radius: 50%;
+    font-size: 25px ;
+    color: var(--main-color);
+    background-color: rgb(239, 232, 232);
+    width: 60px;
+    box-shadow: 5px 5px 5px rgb(195, 207, 207);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    text-shadow: 5 px  var(--main-color);
+
+
+}
+
+.btns button.sp {
+
+    background-color: var(--main-color);
+    color: rgb(235, 243, 243);
+
+}
+
+.btns button.equal {
+    width: 180px;   
+    border-radius: 20px;
+    height: 50px;
+
+}
+
+.appmenu{
+    position: absolute;
+    top: 10px ;
+    left: 10px;
+
+}
+
+.icon{
+    display: flex;
+    flex-direction: column;
+    width:25px;
+    gap: 5px;
+    margin-bottom: 10px;
+    transition:0.3s 
+
+}
+
+.menu{
+    padding: 10px;
+    border-radius: 10px;
+    background-color: white;
+    display: flex;
+    gap:10px;
+    transform: scale (0); 
+    transform-origin: top left;
+    transition: 0.3s;
+    box-shadow:5px 5px 10px var(--main-color);
+}
+
+menu.open{ 
+    transform:scale(1); 
+
+}
+
+.menu div{
+    height: 40px;
+    width: 40px ;
+    border-radius: 50%;
+    border: solid 2px gray;
+}
+
+.menu div:nth-child(1) {
+    background-color: blue;
+}
+.menu div:nth-child(2) {
+    background-color: rgb(255, 0, 136);
+}
+
+.menu div:nth-child(3) {
+    background-color: rgb(255, 0, 0);
+
+}
+
+.menu div:nth-child(4) {
+    background-color: rgb(255, 255, 0);
+}
+
+.menu div:nth-child(5) {
+    background-color: rgb(0, 255, 140);
+}
+
+body.blue{ 
+    --main
 }
